# rustalk

./: .gitignore  CMakeLists.txt  MessageDelegate.cpp  MessageDelegate.h  MessageListModel.cpp  MessageListModel.h  main.cpp  mainwindow.cpp  mainwindow.h  report.txt  rustalk_core.h
media/: system_architecture.md
rust/rustakl_sever/: Cargo.toml
rust/rustakl_sever/src/: main.rs
rust/rustalk_core/: Cargo.toml
rust/rustalk_core/src/: lib.rs
rust/rustalk_core/src/api/: chat.rs  contact.rs  init.rs  mod.rs  system.rs  user.rs
rust/rustalk_core/src/domain/: contact.rs  conversation.rs  message.rs  mod.rs  session.rs  user.rs
rust/rustalk_core/src/net/: heartbeat.rs  mod.rs  protocol.rs  ws_client.rs
rust/rustalk_core/src/runtime/: channels.rs  dispatcher.rs  executor.rs  mod.rs
rust/rustalk_core/src/storage/: mod.rs  sqlite.rs
