[package]
name = "rustalk_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
once_cell = "1.19"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.21"
